# MCP3008-Library-483

./: CMakeLists.txt  README.md  project-build.sh
lib/: MCP3008.cpp  MCP3008.h
src/: mcp-test.cpp
